--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<center>
 	<p>text</p>
 	<img alt"Penguins" height="303" src="photo/Penguins.jpg">
+
+	<form action="action.php"></form>
+	<input mame="h1" type"txt"> </input>
+	<input mame="h3" type"txt"> </input>
+	<input  type"submit"> </input>
+
 	</center>
 </body>
 	</html>
